--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="logView"
+            type="com.sunnypoint.felicaexample.model.LogInfo" />
+    </data>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <com.sunnypoint.ripplebackground.RippleBackground xmlns:app="http://schemas.android.com/apk/res-AUTO"
+        android:id="@+id/vBackground"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:rb_color="#C1E1A6"
+        app:rb_duration="5000"
+        app:rb_radius="40dp"
+        app:rb_rippleAmount="6"
+        app:rb_scale="6">
 
-</RelativeLayout>
+        <FrameLayout
+            android:id="@+id/vPollingContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+
+            <ImageButton
+                android:id="@+id/btnPolling"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="center"
+                android:background="@drawable/circle" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Touch" />
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/txtLogView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vPollingContent"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="@{logView.msg}" />
+
+    </com.sunnypoint.ripplebackground.RippleBackground>
+</layout>
