--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-AUTO">
+
     <data>
+
         <variable
             name="logView"
             type="com.sunnypoint.felicaexample.model.LogInfo" />
     </data>
 
-    <com.sunnypoint.ripplebackground.RippleBackground xmlns:app="http://schemas.android.com/apk/res-AUTO"
-        android:id="@+id/vBackground"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:rb_color="#C1E1A6"
-        app:rb_duration="5000"
-        app:rb_radius="40dp"
-        app:rb_rippleAmount="6"
-        app:rb_scale="6">
+        android:layout_height="match_parent">
 
-        <FrameLayout
-            android:id="@+id/vPollingContent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true">
+        <com.sunnypoint.ripplebackground.RippleBackground
+            android:id="@+id/vBackground"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:rb_color="#C1E1A6"
+            app:rb_duration="5000"
+            app:rb_radius="40dp"
+            app:rb_rippleAmount="6"
+            app:rb_scale="6" />
 
-            <ImageButton
-                android:id="@+id/btnPolling"
-                android:layout_width="64dp"
-                android:layout_height="64dp"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/vPollingContent"
+                android:layout_width="90dp"
+                android:layout_height="90dp"
                 android:layout_gravity="center"
-                android:background="@drawable/circle" />
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="80dp">
+
+                <ImageButton
+                    android:id="@+id/btnPolling"
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:background="@drawable/circle" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:clickable="false"
+                    android:singleLine="false"
+                    android:text="Touch" />
+
+            </FrameLayout>
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Touch" />
-        </FrameLayout>
-
-        <TextView
-            android:id="@+id/txtLogView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/vPollingContent"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="@{logView.msg}" />
-
-    </com.sunnypoint.ripplebackground.RippleBackground>
+                android:id="@+id/txtLogView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:maxLines = "20"
+                android:scrollbars = "vertical"
+                android:gravity="center"
+                android:text="@{logView.msg}" />
+        </LinearLayout>
+    </FrameLayout>
 </layout>
